--- a/style.css
+++ b/style.css
@@ -75,7 +75,15 @@ main {
   padding: 1rem;
   border-radius: 8px;
   text-align: center;
+  
 }
+.movie-grid .movie a {
+ text-decoration: none;
+ color: #fff;
+}
+.movie-grid .movie a:hover {
+  color: #1a0101;
+ }
 .movie-grid .movie:hover {
   transform: scale(120%);
   transition: visibility 0s, 0.5s;
