--- a/style.css
+++ b/style.css
@@ -51,6 +51,79 @@ nav ul li a {
   text-decoration: none;
 }
 
+nav ul li a:hover {
+  color:#1a0101;
+  text-decoration: none;
+  background-color: #fff;
+}
+
+
+
+.dropdown {
+  float: left;
+  overflow: hidden;
+}
+
+/* Dropdown button */
+.dropdown .dropbtn {
+  font-size: 1rem;
+  border: none;
+  outline: none;
+  color: white;
+  background-color: inherit;
+  font-family: inherit; 
+  margin: 0; 
+}
+
+/* Add a red background color to navbar links on hover */
+.navbar a:hover, .dropdown:hover .dropbtn {
+  background-color:#ffffff;
+  color:#1a0101;
+  border-radius: 2px;
+}
+
+/* Dropdown content (hidden by default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  min-width: 160px;
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content button {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align:center;
+  border: none;
+  border-style: none;
+  background-color:#ffffff;
+  height: 35px;
+  width: 70px;
+  cursor:pointer;
+}
+
+/* Add a grey background color to dropdown links on hover */
+.dropdown-content button:hover {
+  background-color:#1a0101;
+  color: #fff;
+  border-radius: 5px;
+}
+
+
+.dropdown:hover .dropdown-content {
+  display: block;
+  color: #1a0101;  
+}
+
+header .nav-toggle,
+header .nav-toggle-label{
+    display: none;
+}
+
 .search-bar {
   display: flex;
 }
@@ -62,13 +135,13 @@ nav ul li a {
 }
 
 main {
-  padding: 4rem;
+  padding: 2rem;
 }
 
 .movie-grid {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(200px, 2fr));
-  gap: 1rem;
+  gap: 0.8rem;
 }
 
 .movie-grid .movie {
@@ -131,10 +204,30 @@ main {
 
 }
 
+#Newhome .movie-grid .movie{
+display: flex;
+gap: 100px;
+}
+
+
+.loading {
+  display: none;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 1.5rem;
+  color: #fff;
+  background-color: #1a0101;;
+  padding: 1rem 2rem;
+  border-radius: 8px;
+  z-index: 1000; 
+}
+
 
 footer {  
   position:fixed;
-  background-color: #333;
+  background-color: #1a0101;
   color: #fff;
   text-align: center;
   padding: 1rem;
@@ -143,22 +236,189 @@ footer {
   line-height: 1.4rem;
 }
 
-.spinner  h1 {  
-  margin:200px 600px;      
-  animation: spin 3s linear infinite;
-  color: #1a0101;
+
+@media (max-width:425px) {
+  header{
+    width: 100%;
+    padding: 10px ;
+  }
+  header nav{
+    position: absolute;
+    width: 100%;
+    top: 120%;
+    display: flex;
+    justify-content: center;
+    margin-top: -10px;
+    padding-top: 10px;
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), transparent);
+    transition: all .5s ease-in-out;
 }
 
-@keyframes spin {
+header nav ul{
+    display: block;
+    text-align: center;
+    width: 90%;
+    height: fit-content;
+    border-radius: 5px;
+    background-color: hsl(0, 0%, 100%);
+    padding: 10px 0;
+    transform-origin: top;
+    transform: scaleY(0);
+    transition: all .5s;
+}
+
+header nav ul li{
+    padding: 10px;
+}
+
+header nav ul li a{
+    color: #000;
+    opacity: 0;
+    transition: all .5s;
+    transition-delay: .5s;
+}
+
+header nav ul li a:after,
+header > a{
+    display: none;
+}
+
+
+
+  header .nav-toggle-label span,
+    header .nav-toggle-label span:before,
+    header .nav-toggle-label span:after{
+        width: 27px;
+        height: 4px;
+        background-color: #ffffff;
+        display: inline-block;
+        border-radius: 10px;
+    }
+
+    header .nav-toggle-label span{
+        position: relative;
+        transform: translateX(0);
+        transition: all .5s;
+        opacity: 1;
+    }
+
+    header .nav-toggle-label span:before,
+    header .nav-toggle-label span:after{
+        content: "";
+        position: absolute;
+        height: 100%;
+    }
+
+    header .nav-toggle-label span:before{
+        bottom: 8px;
+    }
+
+    header .nav-toggle-label span:after{
+        top: 8px;
+    }
+
+
+    header .nav-toggle-label{
+        display: block;
+        position: absolute;
+        right: 20px;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        cursor: pointer;
+    }
+
+    header .nav-toggle-label p{
+        transform: translateX(50px);
+        font-size: 30px;
+        position: absolute;
+        right: 5px;
+        font-weight: 600;
+        transition: all .5s;
+        opacity: 0;
+    }
+
+    .nav-toggle:checked ~ nav{
+        height: 200px;
+        width: 200px;
+        background-color: #1a0101;
+        margin-left: 170px;
+      
+    }
+
+
+    .nav-toggle:checked ~ nav ul{
+        display: block;
+        transform: scaleY(1);
+        height: 180px;
+    }
+
+    .nav-toggle:checked ~ nav ul li a{
+        opacity: 1;
+        height: 100px;
+       
+    }
+
+    .nav-toggle:checked ~ .nav-toggle-label span{
+        opacity: 0;
+        transform: translateX(50px);
+    }
+
+    .nav-toggle:checked ~ .nav-toggle-label p{
+        transform: translateX(0);
+        opacity: 1;
+    }
+
+    .nav-toggle:checked ~ nav ul .dropdown{
+     background-color: #1a0101;
+      margin-top: 5px;
+      text-align: center;
+      margin: auto 48px;
+
+  }
+
+  .nav-toggle:checked ~ nav ul .dropdown .dropbtn .dropdown-content{
+    display: block;
+    transform: scaleY(1);
+    color:#000000;
+
+}
+
+.nav-toggle:checked ~ nav ul .dropdown .dropbtn .dropdown-content button{
+    opacity: 1; 
+    color:#000000;
+   background-color: #1a0101;
+
+}
+header h1{
+  width: 50px;
+  font-size:0.9rem ;
+  margin-left: 10px;
+}
+
+
+  .search-bar{
+    width: 100%;
+    margin: auto 10px;
+  }
+  .movie-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(60px));
   
-  100% {
-      transform:scale(2.2);
+    width: 100%;
   }
   
-}
-
-
-
-@media (max-width:785) {
+  .movie-grid .movie {
+    padding: 1rem;
+    border-radius: 8px;
   
+    margin: -30px auto;
+  }
+  .home {
+    width: 60%;
+   height: 10%;
+   padding: 0;
+   margin: 0; 
+ 
+  }
 }
